# jipp2

./: Account.cpp  Account.h  AccountFinanse.cpp  CMakeLists.txt  Figures.cpp  Figures.h  Rectangles.cpp  main.cpp  mein.h
Figury/: CMakeLists.txt
Figury/include/: Kula.h  Prostopadloscian.h
Figury/src/: Kula.cpp  Prostopadloscian.cpp  main.cpp
FirstClass/: CMakeLists.txt
FirstClass/include/: FirstClass.h
FirstClass/src/: FirstClass.cpp  main.cpp
Node/: CMakeLists.txt
Node/include/: Node.h
Node/src/: Node.cpp  main.cpp
Operator/: CMakeLists.txt
Operator/src/: Vector.cpp  Vector.h  main.cpp
Pojazd/: CMakeLists.txt
Pojazd/include/: Pojazd.h
Pojazd/src/: Pojazd.cpp  main.cpp
allocation_basics/: CMakeLists.txt  main.cpp
copyingConstructor/: CMakeLists.txt
copyingConstructor/src/: main.cpp
firstLib/: CMakeLists.txt
firstLib/include/: lib.h
firstLib/src/: lib.cpp
firstLibCall/: CMakeLists.txt  main.cpp
matrixApp/: CMakeLists.txt  main.cpp
matrixLib/: CMakeLists.txt
matrixLib/include/: matrixLib.h
matrixLib/src/: matrixLib.cpp
simpleCalc/: CMakeLists.txt
simpleCalc/include/: calc.h
simpleCalc/src/: main.cpp
