cmake_minimum_required(VERSION 3.17)
add_subdirectory(allocation_basics)
add_subdirectory(simpleCalc)
add_subdirectory(firstLib)
add_subdirectory(firstLibCall)
add_subdirectory(FirstClass)
add_subdirectory(Figury)
add_subdirectory(copyingConstructor)
add_subdirectory(Pojazd)
add_subdirectory(Operator)
add_subdirectory(Node)